/*
 * Copyright (C) 2020 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
package android.nfc.cardemulation;

import "frameworks/base/core/proto/android/content/component_name.proto";
import "frameworks/base/core/proto/android/nfc/aid_group.proto";
import "frameworks/base/core/proto/android/privacy.proto";

option java_multiple_files = true;

// Debugging information for android.nfc.cardemulation.ApduServiceInfo
message ApduServiceInfoProto {
    option (.android.msg_privacy).dest = DEST_EXPLICIT;

    optional .android.content.ComponentNameProto component_name = 1;
    optional string description = 2;
    optional bool on_host = 3;
    optional string off_host_name = 4;
    optional string static_off_host_name = 5;
    repeated AidGroupProto static_aid_groups = 6;
    repeated AidGroupProto dynamic_aid_groups = 7;
    optional string settings_activity_name = 8;
}
